--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,12 @@
-<h1>About Us</h1>
-<p>
-	Don't really feel like writing this
-	About Carol
-	Cool Girl but too much of a nerd for doing this 
-</p>
+<% provide(:title, 'About Us') %>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %>
+		</title>
+	</head>
+	<body>
+		<h1>About Us</h1>
+		<p>The <a href='http://railstutorial.org/help'>Ruby on Rails Tutorial</a> is a project to make a book and add screencasts to teach web development with <a href='http://railstutorial.org'>Ruby on Rails</a>. This is the sample application for the tutorial.</p>
+	</body>
+</html>
