--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,7 +4,7 @@
 
 $grayMediumLight: #eaeaea;
 
-@mixin box_sizing{
+@mixin box_sizing {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -12,20 +12,20 @@ $grayMediumLight: #eaeaea;
 
 /* universal */
 
-html{
-	overflow-y: scroll;
+html {
+  overflow-y: scroll;
 }
 
-body{
-	padding-top: 60px;
+body {
+  padding-top: 60px;
 }
 
-section{
-	overflow: auto;
+section {
+  overflow: auto;
 }
 
-textarea{
-	resize: vertical;
+textarea {
+  resize: vertical;
 }
 
 .center {
@@ -33,33 +33,33 @@ textarea{
   h1 {
     margin-bottom: 10px;
   }
- }
+}
 
 /* typography */
 
-h1, h2, h3, h4, h5, h6{
-	line-height: 1;
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1;
 }
 
-h1{
-	font-size: 3em;
-	letter-spacing: -2px;
-	margin-bottom: 30px;
-	text-align: center;
+h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
-h2{
-	font-size: 1.2em;
-	letter-spacing: -1px;
-	margin-bottom: 30px;
-	text-align: center;
-	font-weight: normal;
-	color: $grayLight;
+h2 {
+  font-size: 1.2em;
+  letter-spacing: -1px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: normal;
+  color: $grayLight;
 }
 
-p{
-	font-size: 1.1em;
-	line-height: 1.7em;
+p {
+  font-size: 1.1em;
+  line-height: 1.7em;
 }
 
 
@@ -109,7 +109,7 @@ footer {
 
 /* miscellaneous */
 
-.debug_dump{
+.debug_dump {
   clear: both;
   float: left;
   width: 100%;
@@ -145,6 +145,35 @@ aside {
 .gravatar {
   float: left;
   margin-right: 10px;
+}
+
+.stats {
+  overflow: auto;
+  a {
+    float: left;
+    padding: 0 10px;
+    border-left: 1px solid $grayLighter;
+    color: gray;
+    &:first-child {
+      padding-left: 0;
+      border: 0;
+    }
+    &:hover {
+      text-decoration: none;
+      color: $blue;
+    }
+  }
+  strong {
+    display: block;
+  }
+}
+
+.user_avatars {
+  overflow: auto;
+  margin-top: 10px;
+  .gravatar {
+    margin: 1px 1px;
+  }
 }
 
 /* forms */
